# ElfLoader

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/: Elf.h  ElfHeader.h  ElfLoader.h  ElfParser.h  ElfProgramHeader.h  ElfSectionHeader.h
loader/: loader.asm
src/: ElfLoader.cpp  ElfParser.cpp
